--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,23 @@
 {
-  "manifest_version": 2,
-  "name": "Mute Notifications",
-  "description": "Disable all desktop notifications with one click.",
-  "version": "0.3",
+  "manifest_version": 3,
+  "name": "Mute Notifications on 1 hour",
+  "description": "Disable all desktop notifications with one click on 1 hour.",
+  "version": "1.0.0",
   "icons": {
-    "128": "logo-128.png",
-    "48": "logo-48.png"
+    "128": "images/logo-128.png",
+    "48": "images/logo-48.png"
   },
   "permissions": [
     "contentSettings",
     "storage"
   ],
-  "browser_action": {
+  "action": {
     "default_icon": {
-      "19": "icon-on-19.png",
-      "38": "icon-on-38.png"
+      "19": "images/icon-on-19.png",
+      "38": "images/icon-on-38.png"
     }
   },
   "background": {
-    "scripts": ["background.js"]
+    "service_worker": "background.js"
   }
 }
