--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
   "description": "Disable all desktop notifications with one click on 1 hour.",
   "version": "1.0.0",
   "icons": {
-    "32": "images/volume-mute-32.png",
-    "64": "images/volume-mute-64.png",
-    "128": "images/volume-mute-128.png"
+    "32": "images/logo-32.png",
+    "64": "images/logo-64.png",
+    "128": "images/logo-128.png"
   },
   "permissions": [
     "contentSettings"
