--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,18 @@
   "manifest_version": 3,
   "name": "Mute Notifications on 1 hour",
   "description": "Disable all desktop notifications with one click on 1 hour.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "icons": {
+    "16": "images/logo-16.png",
+    "24": "images/logo-24.png",
     "32": "images/logo-32.png",
     "64": "images/logo-64.png",
     "128": "images/logo-128.png"
   },
   "permissions": [
     "contentSettings",
-    "alarms"
+    "alarms",
+    "storage"
   ],
   "action": {
     "default_icon": {
